<resources>
    <string name="app_name">KIoskApp</string>
    <string name="welcome_button">Start</string>
    <string name="pay_button">Pay Now</string>
    <string name="menu_screen_header">Clover Cafe menu !!</string>
    <string name="single_menu_screen_header">Your selected menu item !!</string>
    <string name="menu_screen_footer">Choose your menu</string>
    <string name="welcome_screen_header">Welcome to Clover Cafe </string>
    <string name="add_items_cart">Add %1$d to cart $ %2$.2f</string>
    <string name="single_menu_price">Price : $ %1$.2f</string>
    <string name="order_screen_header">Your Cart</string>
    <string name="restaurant_name">Clover Cafe !!!</string>
    <string name="order_header">Your order</string>
    <string name="sub_total_text">Subtotal</string>
    <string name="tax_text">Tax</string>
    <string name="total_text">Total</string>
    <string name="menu_price">$ %1$.2f</string>
    <string name="checkout_text">Proceed to Checkout</string>
    <string name="order_quantity">x %1$d</string>
    <string name="order_price">$ %1$.2f</string>
    <string name="tax">$ %1$.2f</string>
    <string name="total">$ %1$.2f</string>
    <string name="choose_extra_menu_text">Choose more items</string>
    <string name="proceed_text">Proceed without selecting</string>
    <string name="back_text">Back</string>
    <string name="pay_success">$ %1$.2f payment successful.
        Thank you for your payment</string>
    <string name="exit">Exit</string>
    <string name="welcome_external_display">Welcome to Clover Cafe</string>
    <string name="kitchen_display">Send Order</string>

</resources>
